--- a/MegaStorage/MegaStorage.csproj
+++ b/MegaStorage/MegaStorage.csproj
@@ -43,10 +43,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\ItemIds.cs" />
+    <Compile Include="Mapping\ItemIds.cs" />
     <Compile Include="Persistence\FarmhandInventorySaver.cs" />
     <Compile Include="UI\MagicItemGrabMenu.cs" />
-    <Compile Include="NiceChestFactory.cs" />
+    <Compile Include="Mapping\NiceChestFactory.cs" />
     <Compile Include="SpritePatcher.cs" />
     <Compile Include="ItemPatcher.cs" />
     <Compile Include="MegaStorageMod.cs" />
@@ -60,7 +60,7 @@
     <Compile Include="Persistence\ISaver.cs" />
     <Compile Include="Persistence\LocationInventorySaver.cs" />
     <Compile Include="Persistence\LocationSaver.cs" />
-    <Compile Include="Models\MappingExtensions.cs" />
+    <Compile Include="Mapping\MappingExtensions.cs" />
     <Compile Include="Persistence\SaveData.cs" />
     <Compile Include="Persistence\SaveManager.cs" />
   </ItemGroup>
