--- a/MegaStorage/config.json
+++ b/MegaStorage/config.json
@@ -1,4 +1,4 @@
 {
-  "LargeChestRecipe": "388 100 334 1 335 1",
-  "MagicChestRecipe": "388 200 768 10 769 10"
+  "LargeChestRecipe": "388 100 334 5 335 5",
+  "MagicChestRecipe": "709 100 336 5 337 5 768 50 769 50"
 }
