--- a/MegaStorage/config.json
+++ b/MegaStorage/config.json
@@ -1,4 +1,20 @@
 {
-  "LargeChestRecipe": "388 100 334 5 335 5",
-  "MagicChestRecipe": "709 100 336 5 337 5 768 50 769 50"
+  "LargeChest": {
+    "Id": 816,
+    "Name": "Large Chest",
+    "Description": "A large place to store your items.",
+    "Recipe": "388 100 334 5 335 5",
+    "SpritePath": "Sprites/LargeChest.png",
+    "SpriteBWPath": "Sprites/LargeChestBW.png",
+    "SpriteBracesPath": "Sprites/LargeChestBraces.png"
+  },
+  "MagicChest": {
+    "Id": 817,
+    "Name": "Magic Chest",
+    "Description": "A magical place to store your items.",
+    "Recipe": "709 100 336 5 337 5 768 50 769 50",
+    "SpritePath": "Sprites/MagicChest.png",
+    "SpriteBWPath": "Sprites/MagicChestBW.png",
+    "SpriteBracesPath": "Sprites/MagicChestBraces.png"
+  }
 }
