--- a/MegaStorage/MegaStorage.csproj
+++ b/MegaStorage/MegaStorage.csproj
@@ -65,11 +65,8 @@
     <Compile Include="Persistence\LocationInventorySaver.cs" />
     <Compile Include="Persistence\LocationSaver.cs" />
     <Compile Include="Mapping\MappingExtensions.cs" />
-    <Compile Include="Persistence\SaveData.cs" />
+    <Compile Include="Models\SaveData.cs" />
     <Compile Include="Persistence\SaveManager.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.2.0\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Sprites\LargeChest.png">
@@ -93,6 +90,9 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.2.0\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Pathoschild.Stardew.ModBuildConfig.2.2.0\build\Pathoschild.Stardew.ModBuildConfig.targets" Condition="Exists('..\packages\Pathoschild.Stardew.ModBuildConfig.2.2.0\build\Pathoschild.Stardew.ModBuildConfig.targets')" />
