--- a/MegaStorage/MegaStorage.csproj
+++ b/MegaStorage/MegaStorage.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Models\CustomChestConfig.cs" />
     <Compile Include="Models\ModConfig.cs" />
     <Compile Include="Persistence\FarmhandInventorySaver.cs" />
+    <Compile Include="Persistence\FarmhandMonitor.cs" />
     <Compile Include="UI\MagicItemGrabMenu.cs" />
     <Compile Include="Mapping\CustomChestFactory.cs" />
     <Compile Include="SpritePatcher.cs" />
