--- a/MegaStorage/MegaStorage.csproj
+++ b/MegaStorage/MegaStorage.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Models\ModConfig.cs" />
     <Compile Include="Persistence\FarmhandInventorySaver.cs" />
     <Compile Include="Persistence\FarmhandMonitor.cs" />
+    <Compile Include="UI\AllCategory.cs" />
+    <Compile Include="UI\MiscCategory.cs" />
     <Compile Include="UI\ChestCategory.cs" />
     <Compile Include="UI\MagicItemGrabMenu.cs" />
     <Compile Include="Mapping\CustomChestFactory.cs" />
