--- a/MegaStorage/MegaStorage.csproj
+++ b/MegaStorage/MegaStorage.csproj
@@ -75,6 +75,9 @@
     <Compile Include="IConvenientChestsAPI.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Sprites\AllTab.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Sprites\LargeChest.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
