--- a/MegaStorage/manifest.json
+++ b/MegaStorage/manifest.json
@@ -1,17 +1,27 @@
 {
-  "Name": "Mega Storage",
-  "Author": "Alek",
-  "Version": "1.3",
-  "Description": "Adds Large Chests and Magic Chests to the game.",
-  "UniqueID": "Alek.MegaStorage",
-  "EntryDll": "MegaStorage.dll",
-  "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:4089" ],
-  "Dependencies": [
-    {
-      "UniqueID": "aEnigma.ConvenientChests",
-      "MinimumVersion": "1.1.1",
-      "IsRequired": false
-    }
-  ]
+	"Name": "Mega Storage",
+	"Author": "Alek",
+	"Version": "1.3.1-unofficial.1-furyx639",
+	"Description": "Adds Large Chests and Magic Chests to the game.",
+	"UniqueID": "Alek.MegaStorage",
+	"EntryDll": "MegaStorage.dll",
+	"MinimumApiVersion": "3.2.0",
+	"UpdateKeys": [ "Nexus:4089" ],
+	"Dependencies": [
+		{
+			"UniqueID": "aEnigma.ConvenientChests",
+			"MinimumVersion": "1.5.0",
+			"IsRequired": false
+		},
+		{
+			"UniqueID": "Pathoschild.Automate",
+			"MinimumVersion": "1.15.1",
+			"IsRequired": false
+		},
+		{
+			"UniqueID": "Omegasis.SaveAnywhere",
+			"MinimumVersion": "2.12.3",
+			"IsRequired": false
+		}
+	]
 }
