--- a/MegaStorage/manifest.json
+++ b/MegaStorage/manifest.json
@@ -1,7 +1,7 @@
 {
 	"Name": "Mega Storage",
 	"Author": "Alek",
-	"Version": "1.3.1-unofficial.1-furyx639",
+	"Version": "1.3.1",
 	"Description": "Adds Large Chests and Magic Chests to the game.",
 	"UniqueID": "Alek.MegaStorage",
 	"EntryDll": "MegaStorage.dll",
