--- a/MegaStorage/manifest.json
+++ b/MegaStorage/manifest.json
@@ -1,6 +1,6 @@
 {
 	"Name": "Mega Storage",
-	"Author": "Alek",
+	"Author": "Alek and furyx639",
 	"Version": "1.3.1",
 	"Description": "Adds Large Chests and Magic Chests to the game.",
 	"UniqueID": "Alek.MegaStorage",
