--- a/MegaStorageAutomate/MegaStorageAutomate.csproj
+++ b/MegaStorageAutomate/MegaStorageAutomate.csproj
@@ -80,6 +80,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="manifest.json" />
     <None Include="packages.config" />
   </ItemGroup>
