Added tileLocation to CustomChest for DeliveryService compatibility

--- a/MegaStorage/MegaStorage.csproj
+++ b/MegaStorage/MegaStorage.csproj
@@ -12,6 +12,8 @@
     <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
 
     <RunAnalyzersDuringLiveAnalysis>true</RunAnalyzersDuringLiveAnalysis>
+
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <ItemGroup>
