--- a/MegaStorage/manifest.json
+++ b/MegaStorage/manifest.json
@@ -1,7 +1,7 @@
 {
 	"Name": "Mega Storage",
 	"Author": "Alek and furyx639",
-	"Version": "1.4.5-beta.5",
+	"Version": "1.5.0-alpha.1",
 	"Description": "Adds Mega Storage Chests to the game.",
 	"UniqueID": "Alek.MegaStorage",
 	"EntryDll": "MegaStorage.dll",
